--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: John of All Trades
+name: Buildchimp's Brain
 
 # Short bio or description (displayed in the header)
 description: Software, 3D Printing, and Random Hacks
