--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Buildchimp's Brain
+name: Brain of Buildchimp
 
 # Short bio or description (displayed in the header)
-description: Software, 3D Printing, and Random Hacks
+description: Curated Selections from the Voices in My Head
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
