--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,17 @@
 #
 
 # Name of your site (displayed in the header)
-name: Brain of Buildchimp
+name: |
+
+╱╱╭╮╱╱╭╮╱╱╱╱╱╱╱╱╱╭━╮╭━━━┳╮╭╮╱╭━━━━╮╱╱╱╱╱╭╮
+╱╱┃┃╱╱┃┃╱╱╱╱╱╱╱╱╱┃╭╯┃╭━╮┃┃┃┃╱┃╭╮╭╮┃╱╱╱╱╱┃┃
+╱╱┃┣━━┫╰━┳━╮╱╭━━┳╯╰╮┃┃╱┃┃┃┃┃╱╰╯┃┃┣┻┳━━┳━╯┣━━┳━━╮
+╭╮┃┃╭╮┃╭╮┃╭╮╮┃╭╮┣╮╭╯┃╰━╯┃┃┃┃╱╱╱┃┃┃╭┫╭╮┃╭╮┃┃━┫━━┫
+┃╰╯┃╰╯┃┃┃┃┃┃┃┃╰╯┃┃┃╱┃╭━╮┃╰┫╰╮╱╱┃┃┃┃┃╭╮┃╰╯┃┃━╋━━┃
+╰━━┻━━┻╯╰┻╯╰╯╰━━╯╰╯╱╰╯╱╰┻━┻━╯╱╱╰╯╰╯╰╯╰┻━━┻━━┻━━╯
 
 # Short bio or description (displayed in the header)
-description: Curated Selections from the Voices in My Head
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
